--- a/docs/developer/upgrades/4.5-to-4.6.mdx
+++ b/docs/developer/upgrades/4.5-to-4.6.mdx
@@ -63,7 +63,7 @@ If you're using raw SQL queries (either in the application code, or running in e
 
 If using [Spree Frontend](https://github.com/spree/spree_rails_frontend), run the following additional commands to get everything set up correctly with the updated gems:
 
-```
+```bash
 bin/rails javascript:install:esbuild
 bin/rails turbo:install
 bin/rails g spree:frontend:install
