--- a/docs/developer/upgrades/2.0-to-2.1.mdx
+++ b/docs/developer/upgrades/2.0-to-2.1.mdx
@@ -1,12 +1,7 @@
 ---
 title: 2.0 to 2.1
-section: upgrades
-order: 12
-hidden: true
 description: 'This guide covers upgrading a 2.0 Spree store, to a 2.1 store.'
 ---
-
-# 2.0 to 2.1
 
 ## Overview
 
@@ -23,14 +18,16 @@ For this Spree release, you will need to upgrade your Rails version to at least 
 It is recommended to read through the [Upgrading Ruby on Rails guide](http://guides.rubyonrails.org/upgrading_ruby_on_rails.html#upgrading-%20from-rails-3-2-to-rails-4-0) to learn what needs to be done for your application to migrate to Rails 4.
 
 ```ruby
-gem 'rails', '~> 4.0'```
+gem 'rails', '~> 4.0'
+```
 
 ## Upgrade Spree
 
 For best results, use the 2-1-stable branch from GitHub:
 
 ```ruby
-gem 'spree', github: 'spree/spree', branch: '2-1-stable'```
+gem 'spree', '~> 2.1'
+```
 
 Run `bundle update spree`.
 
@@ -39,15 +36,11 @@ Run `bundle update spree`.
 Copy over the migrations from Spree (and any other engine) and run them using
 these commands:
 
+```bash
     rake railties:install:migrations
     rake db:migrate
+```
 
 ## Read the release notes
 
-For information about changes contained with this release, please read the [2.1.0 Release Notes](http://guides.spreecommerce.org/release_notes/spree_2_1_0.html).
-
-## Verify that everything is OK
-
-Click around in your store and make sure it's performing as normal. Fix any deprecation warnings you see.
-```
-
+For information about changes contained with this release, please read the [2.1.0 Release Notes](https://github.com/spree/spree/releases/tag/v2.1.0).
