--- a/docs/developer/upgrades/2.2-to-2.3.mdx
+++ b/docs/developer/upgrades/2.2-to-2.3.mdx
@@ -1,12 +1,7 @@
 ---
 title: 2.2 to 2.3
-section: upgrades
-hidden: true
-order: 10
 description: 'This guide covers upgrading a 2.2 Spree store, to a 2.3 store.'
 ---
-
-# 2.2 to 2.3
 
 ## Overview
 
@@ -29,7 +24,8 @@ gem 'rails', '~> 4.1.2'
 For best results, use the 2-3-stable branch from GitHub:
 
 ```ruby
-gem 'spree', github: 'spree/spree', branch: '2-3-stable'```
+gem 'spree', '~> 2.3'
+```
 
 Run `bundle update spree`.
 
@@ -38,15 +34,11 @@ Run `bundle update spree`.
 Copy over the migrations from Spree (and any other engine) and run them using
 these commands:
 
+```bash
     rake railties:install:migrations
     rake db:migrate
+```
 
 ## Read the release notes
 
-For information about changes contained with this release, please read the [2.3.0 Release Notes](http://guides.spreecommerce.org/release_notes/spree_2_3_0.html).
-
-## Verify that everything is OK
-
-Click around in your store and make sure it's performing as normal. Fix any deprecation warnings you see.
-```
-
+For information about changes contained with this release, please read the [2.3.0 Release Notes](https://github.com/spree/spree/releases/tag/v2.3.0).
