--- a/docs/developer/upgrades/2.3-to-2.4.mdx
+++ b/docs/developer/upgrades/2.3-to-2.4.mdx
@@ -1,12 +1,8 @@
 ---
 title: 2.3 to 2.4
 section: upgrades
-hidden: true
-order: 9
 description: 'This guide covers upgrading a 2.3 Spree store, to a 2.4 store.'
 ---
-
-# 2.3 to 2.4
 
 This guide has been written from the perspective of a blank Spree 2.3 store with no extensions.
 
@@ -22,10 +18,9 @@ gem 'rails', '~> 4.1.8'
 
 ## Upgrade Spree
 
-For best results, use the 2-4-stable branch from GitHub:
-
 ```ruby
-gem 'spree', github: 'spree/spree', branch: '2-4-stable'```
+gem 'spree', '~> 2.4'
+```
 
 Run `bundle update spree`.
 
@@ -34,15 +29,15 @@ Run `bundle update spree`.
 Copy over the migrations from Spree (and any other engine) and run them using
 these commands:
 
-    rake railties:install:migrations
-    rake db:migrate
+```bash
+rake railties:install:migrations
+```
+
+```bash
+rake db:migrate
+```
 
 ## Read the release notes
 
-For information about changes contained within this release, please read the [2.4.0 Release Notes](http://guides.spreecommerce.org/release_notes/spree_2_4_0.html).
-
-## Verify that everything is OK
-
-Click around in your store and make sure it's performing as normal. Fix any deprecation warnings you see.
-```
+For information about changes contained within this release, please read the [2.4.0 Release Notes](https://github.com/spree/spree/releases/tag/v2.4.0).
 
