--- a/docs/developer/upgrades/3.0-to-3.1.mdx
+++ b/docs/developer/upgrades/3.0-to-3.1.mdx
@@ -37,8 +37,8 @@ rake db:migrate
 If you are using Spree Gateway and/or Spree Auth Devise you should also upgrade them:
 
 ```ruby
-gem 'spree_auth_devise', '~> 3.1.0.rc1'
-gem 'spree_gateway', '~> 3.1.0.rc1'
+gem 'spree_auth_devise', '~> 3.1'
+gem 'spree_gateway', '~> 3.1'
 ```
 
 For Spree Auth Devise run installer:
@@ -73,9 +73,4 @@ If you were disabling the alert checks you'll now want to remove this preference
 
 ## Read the release notes
 
-For information about changes contained within this release, please read the [3.1.0 Release Notes](http://guides.spreecommerce.org/release_notes/spree_3_1_0.html).
-
-## Verify that everything is OK
-
-Run your test suite, click around in your store and make sure it's performing as normal. Fix any deprecation warnings you see.
-
+For information about changes contained within this release, please read the [3.1.0 Release Notes](https://github.com/spree/spree/releases/tag/v3.1.0).
