--- a/docs/developer/upgrades/3.3-to-3.4.mdx
+++ b/docs/developer/upgrades/3.3-to-3.4.mdx
@@ -5,8 +5,6 @@ order: 6
 description: 'This guide covers upgrading a 3.3 Spree store, to a 3.4 store.'
 ---
 
-# 3.3 to 3.4
-
 ### Update Gemfile
 
 ```ruby
@@ -20,9 +18,7 @@ gem 'spree_gateway', '~> 3.3'
 ### Install missing migrations
 
 ```bash
-rails spree:install:migrations
-rails spree_auth:install:migrations
-rails spree_gateway:install:migrations
+rake railties:install:migrations
 ```
 
 ### Run migrations
@@ -41,9 +37,6 @@ rails db:migrate_taxon_icons
 
 ## Read the release notes
 
-For information about changes contained within this release, please read the [3.4.0 Release Notes](http://guides.spreecommerce.org/release_notes/spree_3_4_0.html).
+For information about changes contained within this release, please read the [3.4.0 Release Notes](https://github.com/spree/spree/releases/tag/v3.4.0).
 
-## Verify that everything is OK
-
-Run your test suite, click around in your store and make sure it's performing as normal. Fix any deprecation warnings you see.
 
