--- a/docs/developer/upgrades/3.4-to-3.5.mdx
+++ b/docs/developer/upgrades/3.4-to-3.5.mdx
@@ -18,9 +18,7 @@ gem 'spree_gateway', '~> 3.3'
 ### Install missing migrations
 
 ```bash
-rails spree:install:migrations
-rails spree_auth:install:migrations
-rails spree_gateway:install:migrations
+rake railties:install:migrations
 ```
 
 ### Run migrations
@@ -55,9 +53,7 @@ You're good to go!
 
 ## Read the release notes
 
-For information about changes contained within this release, please read the [3.5.0 Release Notes](http://guides.spreecommerce.org/release_notes/spree_3_5_0.html).
+For information about changes contained within this release, please read the [3.5.0 Release Notes](https://github.com/spree/spree/releases/tag/v3.5.0).
 
-## Verify that everything is OK
 
-Run your test suite, click around in your store and make sure it's performing as normal. Fix any deprecation warnings you see.
 
