--- a/docs/developer/upgrades/3.5-to-3.6.mdx
+++ b/docs/developer/upgrades/3.5-to-3.6.mdx
@@ -28,9 +28,7 @@ You can still use paperclip for attachment management by setting `SPREE_USE_PAPE
 ### Install missing migrations
 
 ```bash
-rails spree:install:migrations
-rails spree_auth:install:migrations
-rails spree_gateway:install:migrations
+rake railties:install:migrations
 ```
 
 ### Run migrations
@@ -43,9 +41,4 @@ You're good to go!
 
 ## Read the release notes
 
-For information about changes contained within this release, please read the [3.6.0 Release Notes](http://guides.spreecommerce.org/release_notes/spree_3_6_0.html).
-
-## Verify that everything is OK
-
-Run your test suite, click around in your application and make sure it's performing as normal. Fix any deprecation warnings you see.
-
+For information about changes contained within this release, please read the [3.6.0 Release Notes](https://github.com/spree/spree/releases/tag/v3.6.0).
