--- a/docs/developer/upgrades/3.6-to-3.7.mdx
+++ b/docs/developer/upgrades/3.6-to-3.7.mdx
@@ -5,8 +5,6 @@ order: 3
 description: 'This guide covers upgrading a 3.6 Spree application, to version 3.7.'
 ---
 
-# 3.6 to 3.7
-
 ## Update Gemfile
 
 ```ruby
@@ -20,10 +18,7 @@ gem 'spree_gateway', '~> 3.4'
 ## Install missing migrations
 
 ```bash
-rails spree:install:migrations
-rails spree_api:install:migrations
-rails spree_auth:install:migrations
-rails spree_gateway:install:migrations
+rake railties:install:migrations
 ```
 
 ## Run migrations
@@ -66,5 +61,4 @@ This will set `currency` in Orders without currency set to `Spree::Config[:defau
 
 ## Read the release notes
 
-For information about changes contained within this release, please read the [3.7.0 Release Notes](https://guides.spreecommerce.org/release_notes/spree_3_7_0.html).
-
+For information about changes contained within this release, please read the [3.7.0 Release Notes](https://github.com/spree/spree/releases/tag/v3.7.0).
