--- a/docs/developer/upgrades/4.0-to-4.1.mdx
+++ b/docs/developer/upgrades/4.0-to-4.1.mdx
@@ -5,17 +5,13 @@ order: 1
 description: This guide covers upgrading a 4.0 Spree application to Spree 4.1.
 ---
 
-If you have any questions or suggestions feel free to reach out through [Spree slack channels](http://slack.spreecommerce.org/)
+<Note>
+If you're on an older version than 4.0 please follow previous upgrade guides and perform those upgrades incrementally**, eg.
 
-**If you're on an older version than 4.0 please follow previous upgrade guides and perform those upgrades incrementally**, eg.
-
-1. [upgrade 3.3 to 3.4](/developer/upgrades/three-dot-three-to-three-dot-four)
-2. [upgrade 3.4 to 3.5](/developer/upgrades/three-dot-four-to-three-dot-five)
-3. [upgrade 3.5 to 3.6](/developer/upgrades/three-dot-five-to-three-dot-six)
-4. [upgrade 3.6 to 3.7](/developer/upgrades/three-dot-six-to-three-dot-seven)
-5. [upgrade 3.7 to 4.0](/developer/upgrades/three-dot-seven-to-four-dot-oh)
-
-This is the safest and recommended method.
+1. [upgrade 3.5 to 3.6](3.5-to-3.6)
+2. [upgrade 3.6 to 3.7](3.6-to-3.7)
+3. [upgrade 3.7 to 4.0](3.7-to-4.0)
+</Note>
 
 ## Update Gemfile
 
@@ -29,7 +25,7 @@ gem 'spree_gateway', '~> 3.9'
 ## Install missing migrations
 
 ```bash
-rails spree:install:migrations
+rake railties:install:migrations
 ```
 
 ## Run migrations
@@ -110,9 +106,4 @@ If you wish to not move to the new Storefront UI it's still an option. Just proc
 
 ## Read the release notes
 
-For information about changes contained within this release, please read the [4.1.0 Release Notes](https://guides.spreecommerce.org/release_notes/spree_4_1_0.html).
-
-## More info
-
-If you have any questions or suggestions feel free to reach out through [Spree slack channels](http://slack.spreecommerce.org/)
-
+For information about changes contained within this release, please read the [4.1.0 Release Notes](https://github.com/spree/spree/releases/tag/v4.1.0).
