--- a/docs/developer/upgrades/4.2-to-4.3.mdx
+++ b/docs/developer/upgrades/4.2-to-4.3.mdx
@@ -6,15 +6,13 @@ hidden: true
 description: This guide covers upgrading a 4.2 Spree application to Spree 4.3.
 ---
 
-If you have any questions or suggestions feel free to reach out through [Spree slack channels](http://slack.spreecommerce.org/)
+<Note>
+If you're on an older version than 4.1 please follow previous upgrade guides and perform those upgrades incrementally**, eg.
 
-**If you're on an older version than 4.1 please follow previous upgrade guides and perform those upgrades incrementally**, eg.
-
-1. [upgrade 3.7 to 4.0](three-dot-seven-to-four-dot-oh)
-2. [upgrade 4.0 to 4.1](four-dot-oh-to-4.1)
+1. [upgrade 3.7 to 4.0](3.7-to-4.0)
+2. [upgrade 4.0 to 4.1](4.0-to-4.1)
 3. [upgrade 4.1 to 4.2](4.1-to-4.2)
-
-This is the safest and recommended method.
+</Note>
 
 ## Update Gemfile
 
@@ -82,7 +80,7 @@ bundle update
 ## Install missing migrations
 
 ```bash
-bin/rails spree:install:migrations
+rake railties:install:migrations
 ```
 
 ## Run migrations
@@ -135,7 +133,7 @@ bundle update spree_related_products
 
 ## Read the release notes
 
-For information about changes contained within this release, please read the [CHANGELOG](https://github.com/spree/spree/blob/master/CHANGELOG).
+For information about changes contained within this release, please read the [Release notes](https://github.com/spree/spree/releases/v4.3.0).
 
 ## More info
 
